--- a/index.html
+++ b/index.html
@@ -13,39 +13,39 @@
     </header>
     <nav>
         <ul>
-            <li id="resume"><a>Main</a></li>
-            <li id="other"><a>Other</a>
+            <li id="resume"><a>主页</a></li>
+            <li id="other"><a>其他</a>
                 <ul class="dropdown">
-                <li><a href="other/maya/maya.html">Maya</a></li>
-                <li><a href="other/resume/resume.html">Resume</a></li>
+                <li><a href="other/maya/maya.html">Maya（3d建模）</a></li>
+                <li><a href="other/resume/resume.html">简历</a></li>
                  </ul>
                 </li>
-            <li id="graphic"><a>Graphic<br>Design</a>
+            <li id="graphic"><a>平面设计</a>
                 <ul class="dropdown">
-                    <li><a href="graphic_design/poster_in_motion/poster_in_motion.html">Poster In Motion</a></li>
-                    <li><a href="graphic_design/new_york_times_title/nytimes_title.html">New York Times Title</a></li>
-                    <li><a href="graphic_design/other/other.html">Other</a></li>
+                    <li><a href="graphic_design/poster_in_motion/poster_in_motion.html">会动的海报</a></li>
+                    <li><a href="graphic_design/new_york_times_title/nytimes_title.html">纽约时报标题设计</a></li>
+                    <li><a href="graphic_design/other/other.html">其他</a></li>
                 </ul>
             </li>
-            <li id="game"><a>Game<br>Design</a>
+            <li id="game"><a>游戏设计</a>
             <ul class="dropdown">
-                <li><a href="game_design/one_week_project/oneweekproject.html">Weekly Project</a></li>
-                <li><a href="game_design/toy_controller/toy_controller.html">Toy Controller</a></li>
-                <li><a href="game_design/fragment_island/fragment_island.html">Fragmented Islands</a></li>
-                <li><a href="game_design/fragment_island/fragment_island.html">Sky Skater</a></li>
+                <li><a href="game_design/one_week_project/oneweekproject.html">周项目</a></li>
+                <li><a href="game_design/toy_controller/toy_controller.html">玩偶外接控制器</a></li>
+                <li><a href="game_design/fragment_island/fragment_island.html">漂浮岛屿</a></li>
+                <li><a href="game_design/fragment_island/fragment_island.html">摩天大厦</a></li>
             </ul>
             </li>
         </ul>
     </nav>
     <main>
         <img src="image/me.jpg" alt="A picture of my self" id="me">
-        <h1>I am...</h1>
+        <h1>我是一名...</h1>
         <p id="selfIntroduction">   a junior at the Parsons School of Design currently studing Design and Technology, minoring in communciation design. I contribute myself toward graphic design and game design for years, and build up a strong design aesthetic. I am a responsible person who devotes to work, more than willing to help others and have team work spirits to meet the deadline and achieve best results.</p>
-        <h2>A Game Designer</h2>
+        <h2>游戏设计师</h2>
             <iframe width="1080" height="640"
             src="https://www.youtube.com/embed/afSKxltHCjs"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
-        <h3 class="right">Weekly Game Project Overview</h3>
+        <h3 class="right">周游戏项目</h3>
         <div class="three_image">
             <a href="game_design/sky_skater/sky_skater.html">
                 <img src="image/skyskater.png" class="center"></img>
@@ -58,7 +58,7 @@
             </a>
         </div>
 
-        <h2>Graphic Designer</h2>
+        <h2>平面设计师</h2>
         
         <section class="container">
         <div class="slider-wrapper">
@@ -79,8 +79,8 @@
         </div>
         </section>
 
-        <h1>Has experienced in ...</h1>
-        <h2>Modeling(Maya)</h2>
+        <h1>也做过一些。。。</h1>
+        <h2>3d建模(Maya)</h2>
         <div class="two_image">
             <a href="game_design/gamedesign.html">
                 <img src="image/final_render1.jpg" class="center"></img>
