--- a/game_design/fragment_island/fragment_island.html
+++ b/game_design/fragment_island/fragment_island.html
@@ -15,8 +15,8 @@
             <li ><a> </a>
             <li ><a> </a>
             <li ><a> </a>
-            <li><a href="../../index.html">Main<br>Page</a></li>
-            <li ><a>Game<br>Design</a>
+            <li><a href="../../index.html">主页</a></li>
+            <li ><a>游戏设计</a>
             <ul class="dropdown">
                 <li><a href="../one_week_project/oneweekproject.html">Weekly Project</a></li>
                 <li><a href="../toy_controller/toy_controller.html">Toy Controller</a></li>
