--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cmn-Hans">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is a three page portfoilo webpage design and belong to Yiting Zhang.">
-    <title>Yiting Zhang's Portfoilo </title>
+    <title>张懿庭的作品集 </title>
     <link rel="stylesheet" href="global.css">
    
 </head>
@@ -16,36 +16,36 @@
             <li id="resume"><a>主页</a></li>
             <li id="other"><a>其他</a>
                 <ul class="dropdown">
-                <li><a href="other/maya/maya.html">Maya（3d建模）</a></li>
+                <li><a href="other/maya/maya.html">Maya<br>3d建模</a></li>
                 <li><a href="other/resume/resume.html">简历</a></li>
                  </ul>
                 </li>
             <li id="graphic"><a>平面设计</a>
                 <ul class="dropdown">
-                    <li><a href="graphic_design/poster_in_motion/poster_in_motion.html">会动的海报</a></li>
-                    <li><a href="graphic_design/new_york_times_title/nytimes_title.html">纽约时报标题设计</a></li>
+                    <li><a href="graphic_design/poster_in_motion/poster_in_motion.html">会动的海报<br></a></li>
+                    <li><a href="graphic_design/new_york_times_title/nytimes_title.html">纽约时报<br>标题设计</a></li>
                     <li><a href="graphic_design/other/other.html">其他</a></li>
                 </ul>
             </li>
             <li id="game"><a>游戏设计</a>
             <ul class="dropdown">
-                <li><a href="game_design/one_week_project/oneweekproject.html">周项目</a></li>
-                <li><a href="game_design/toy_controller/toy_controller.html">玩偶外接控制器</a></li>
-                <li><a href="game_design/fragment_island/fragment_island.html">漂浮岛屿</a></li>
-                <li><a href="game_design/fragment_island/fragment_island.html">摩天大厦</a></li>
+                <li><a href="game_design/one_week_project/oneweekproject.html">周项目<br></a></li>
+                <li><a href="game_design/toy_controller/toy_controller.html">玩偶外接<br>控制器<br></a></li>
+                <li><a href="game_design/fragment_island/fragment_island.html">漂浮岛屿<br></a></li>
+                <li><a href="game_design/fragment_island/fragment_island.html">摩天大厦<br></a></li>
             </ul>
             </li>
         </ul>
     </nav>
     <main>
-        <img src="image/me.jpg" alt="A picture of my self" id="me">
         <h1>我是一名...</h1>
-        <p id="selfIntroduction">   a junior at the Parsons School of Design currently studing Design and Technology, minoring in communciation design. I contribute myself toward graphic design and game design for years, and build up a strong design aesthetic. I am a responsible person who devotes to work, more than willing to help others and have team work spirits to meet the deadline and achieve best results.</p>
+        <div class="two_image">
+            <p> 在帕森斯艺术学院就读的大三学生。我的专业是设计与科技（Design and Technology）中的游戏设计分支,并辅修平面和交互设计（communciation design）。 我对设计充满热情，在多年的学习中，也培养了对于美学的审美能力和对于最新艺术风向的捕捉能力，热爱二次元文化，对于游戏，动漫和漫画都与所了解。<br><br>而在工作中，我懂得变通，乐于沟通，很有责任心，能够尽最好的努力完成每一个任务。</p>
+            <img src="image/me.jpg" alt="A picture of my self"class="quarter">
+        </div>
         <h2>游戏设计师</h2>
-            <iframe width="1080" height="640"
-            src="https://www.youtube.com/embed/afSKxltHCjs"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-            </iframe>
-        <h3 class="right">周游戏项目</h3>
+            <iframe src="https://player.bilibili.com/player.html?aid=1952264662&bvid=BV1aC411t7xU&cid=1487834030&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true" width="1080" height="640"> </iframe>
+        <h3>周游戏项目</h3>
         <div class="three_image">
             <a href="game_design/sky_skater/sky_skater.html">
                 <img src="image/skyskater.png" class="center"></img>
@@ -64,7 +64,7 @@
         <div class="slider-wrapper">
             <div class="slider">
                 <img id="slider-1" src="image/poster in motion.png">
-                <p>This is a project designed for 2023 Halloween Parade located in NYC. The theme that year is "Outside down, Inside Out." I made this static image and corresponding motion graphic piece aims to display in the public environment for promotion.</p>
+                <p>这是一个为了宣传2023年纽约万圣节游行而设计的海报。2023年的主题是，“从内而外，上下颠倒”（Outside down, Inside Out）。我首先制作了这张静止的海报，再从这个的基础上制作了动态设计，然后投放在公共场所，从而达到宣传的作用。</p>
                 <img id="slider-2" src="image/Spread the word.png" >
                 <p>This poster is made for the manifesto, Spread the Word. It is a global campaign working towards inclusion for all people with intellectual and developmental disabilities. It encourages people to stop using “retard”, but respect these groups of people.</p>
                 <img id="slider-3" src="graphic_design/images/Earth is calling.png">
@@ -97,7 +97,7 @@
         </div>
     </main>
     <footer>
-        Email:zhany418@newschool.edu
+        Email:a13816106692@163.com
     </footer>
     <script src="scripts/dropdown-menu.js"></script>
         
