--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="game_design/one_week_project/oneweekproject.html">周项目<br></a></li>
                 <li><a href="game_design/toy_controller/toy_controller.html">玩偶外接<br>控制器<br></a></li>
                 <li><a href="game_design/fragment_island/fragment_island.html">漂浮岛屿<br></a></li>
-                <li><a href="game_design/fragment_island/fragment_island.html">摩天大厦<br></a></li>
+                <li><a href="game_design/fragment_island/fragment_island.html">摩天大楼<br></a></li>
             </ul>
             </li>
         </ul>
