--- a/game_design/toy_controller/toy_controller.html
+++ b/game_design/toy_controller/toy_controller.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the game design page of the portfoilo">
-    <title>Game Design Page </title>
+    <title>游戏设计 </title>
     <link rel="stylesheet" href="../../global.css">
 </head>
 <body>
@@ -15,10 +15,10 @@
             <li ><a> </a>
             <li ><a> </a>
             <li ><a> </a>
-            <li><a href="../../index.html">Main<br>Page</a></li>
-            <li ><a>Game<br>Design</a>
+            <li><a href="../../index.html">主页</a></li>
+            <li ><a>游戏设计</a>
             <ul class="dropdown">
-                <li><a href="../one_week_project/oneweekproject.html">Weekly Project</a></li>
+                <li><a href="../one_week_project/oneweekproject.html">周项目</a></li>
                 <li><a>Toy Controller</a></li>
                 <li><a href="../fragment_island/fragment_island.html">Fragmented Islands</a></li>
                 <li><a href="../sky_skater/sky_skater.html">Sky Skater</a></li>
