--- a/game_design/fragment_island/fragment_island.html
+++ b/game_design/fragment_island/fragment_island.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the game design page of the portfoilo">
-    <title>游戏设计</title>
+    <title>漂浮岛屿</title>
     <link rel="stylesheet" href="../../global.css">
 </head>
 <body>
@@ -67,7 +67,7 @@
     </main>
     
     <footer>
-    Email:a13816106692@163.com
+    Email: a13816106692@163.com
     </footer>
     <script src="../../enlarge_image.js"></script>
     <script src="../scripts/dropdown-menu.js"></script>
