--- a/game_design/one_week_project/oneweekproject.html
+++ b/game_design/one_week_project/oneweekproject.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the game design page of the portfoilo">
-    <title>游戏设计 </title>
+    <title>周游戏项目 </title>
     <link rel="stylesheet" href="../../global.css">
 </head>
 <body>
@@ -84,20 +84,19 @@
         </div>
         <p>这是我这个学期的最终项目，所以和其他的周项目不同，这个游戏的制作周期有足足三个星期。而且我们也有两个关于主题的选择，分别是英雄和鸡蛋。作为额外的要求，如果选择英雄这个主题，游戏中则需要使用到老师提供的三个小手办。我选择英雄这个主题因为我觉得小手办们非常的可爱，而且英雄这个主题本身也有更多的发挥空间。我一直像做一个有背包低通的有更多选择的解谜游戏，这三周正好是一个很好的机会让我实现这样一个完成度更高，内容更多的游戏想法。
 <br><br>
-        My game idea for this one is that three characters represent three different abilities, breaking things, time passing, and getting things from far away. 
+        在这个游戏中，三个手办角色分别代表了三个会在解密中使用的超能力。螃蟹的钳子用来破坏物体，睡着的小人代表了时间流逝，而青蛙则可以用它长长的舌头拾取远处的物体。
              </p>
         <a href="https://tijiena.itch.io/hero "  target="_blank" id="gamepage">点这里跳转游玩页面</a>
     
         <h1>负责内容</h1>
         <p>参与人数：1人（单人项目）<br>
-        -code for positioning and dragging the UI<br>-code for dialogue and dialogue change after they receive what they need<br>-code for the checking previous requirement to get the excalibur and which ending player get<br>-illstruation for all the assets<br>drawing my own spirit sheet and placing everything together</p>
+        -拖拽和使UI归位的代码<br>-任务提示与完成的对话UI以及代码<br>-确认玩家得到那个结局的代码<br>-绘制所有的美术素材<br>自己制作精神条并在游戏制作中使用</p>
         <h1>总结</h1>
-        <p>I think I finished the majority of what I want to achieve in this game, there are multiple endings, a relatively free explore world, and a puzzle solving game that is longer and a little more complicated. 
+        <p>我完成了我对于这个游戏一开始抱有的大部分预期。这个游戏有多个结局，可以自己探索的世界和稍微复杂一些的解密系统。
             <br><br>
-        There are still bugs and errors I have to fix, but I did not have enough time like order of sprites, sometimes the move button is not working or the ability UI did not stay at the position it should be. But because it is not an easy fix, and it does not affect the overall gameplay, I did not fix it right away.
+        当然，游戏中还是一些bug需要被修复，一些美术素材的优先级有问题，UI也有一定几率会出现在错误的地方，但这些问题出现的频率不高，也不影响整体的游玩性，我就先优先把时间放在了别的方面。
             <br><br>
-            I like this game, like the art style and overall dragging gameplay. It is like a mobile game, easy to play. Moreover, it is a puzzle game which is the kind of game I enjoy making and playing by myself. Although I think the puzzle itself can be more logical and harder, it needs more time within the planning stage. So if I have another chance, I will spend more time planning out the whole game. But i think it is in a pretty good place for three weeks game.
-
+            总的来说，我很喜欢这个游戏，不管是它的艺术风格，还是拖拽的解密体验，操作也十分的简单。我个人本身也很喜欢游玩和制作解谜游戏。制作解密游戏本身需要花费大量时间在前期的关卡设计层面，这样才能使解密有趣且环环相扣。所以如果我有更多的时间，修复之前提到的bug无疑是一个层面，但是重新计划一个更缜密的游戏流程会是我考虑别的另一个方面。
 
         </p>
 
