--- a/graphic_design/other/other.html
+++ b/graphic_design/other/other.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the game design page of the portfoilo">
-    <title>Graphic Design</title>
+    <title>平面设计</title>
     <link rel="stylesheet" href="../../global.css">
 </head>
 <body>
@@ -15,27 +15,27 @@
             <li ><a> </a>
             <li ><a> </a>
             <li ><a> </a>
-            <li><a href="../../index.html">Main<br>Page</a></li>
-            <li ><a>Graphic<br>Design</a>
+            <li><a href="../../index.html">主页</a></li>
+            <li ><a>平面设计</a>
             <ul class="dropdown">
-                <li><a href="../poster_in_motion/poster_in_motion.html">Poster In Motion</a></li>
-                <li><a href="../new_york_times_title/nytimes_title.html">New York Times Title</a></li>
-                <li><a>Other</a></li>
+                <li><a href="../poster_in_motion/poster_in_motion.html">会动的海报</a></li>
+                <li><a href="../new_york_times_title/nytimes_title.html">纽约时报<br>标题设计</a></li>
+                <li><a>其他</a></li>
             </ul>
             </li>
         </ul>
     </nav>
     <main>
-        <h2>Static Pieces</h2>
-        <h1>Posters</h1>
+        <h2>静止的平面作品</h2>
+        <h1>海报</h1>
         <div class="three_image">
             <img src="../../image/Spread the word.png" alt="A screenshot of where the game begins"  class="center">
             <img src="images/Cal challenge 1.png" alt="A screenshot of where the game begins"  class="center">
             <img src="images/Earth is calling.png" alt="A screenshot of where the game begins"  class="center">
-            <p>This poster is made for the manifesto, Spread the Word. It is a global campaign working towards inclusion for all people with intellectual and developmental disabilities. It encourages people to stop using “retard”, but respect these groups of people. <br><br>I centered my design around the idea of embracing and protecting, so in the poster, there is a visual element of two arms trying to hug these people, and the color I use is mainly a warm color. The intention of enlarging the font size of respect, the origin R word can be forgotten in the process.</p>
+            <p>这张海报是为一个This poster is made for the manifesto, Spread the Word. It is a global campaign working towards inclusion for all people with intellectual and developmental disabilities. It encourages people to stop using “retard”, but respect these groups of people. <br><br>I centered my design around the idea of embracing and protecting, so in the poster, there is a visual element of two arms trying to hug these people, and the color I use is mainly a warm color. The intention of enlarging the font size of respect, the origin R word can be forgotten in the process.</p>
             <p>This poster is designed to promote sustainable development, and the area I am tackling is the share ride. I listed three major benefits of share rides and then used symbols to present these benefits including price, social interaction, and it is sustainable. And there are two versions of it.</p>
         </div>
-        <h1>Fun Fact Booklet</h1>
+        <h1>小知识手册</h1>
         <section class="container">
             <div class="slider-wrapper">
                 <div class="slider">
@@ -72,7 +72,7 @@
          </div>
          <p>Personal ID is a project aiming to use our name to design our personal business and school card. We need the initials from our name, and design a logo from it, then use this logo in the ID design. I think there is a lot of improvement space for the actuarial ID design, but I like the logo I end up with. I also enjoyed using the letter T and Z to form faces with different emotions, I think this represents my personality as well.</p>
         
-        <h2>Motion Graphics</h2>
+        <h2>动态图形设计</h2>
         <div class="two_image">
             <video  width="600" height="600" controls autoplay muted>  <source src="videos/Moving Prints.mp4" type="video/mp4"></video>
             <video  width="600" height="600" controls autoplay muted>  <source src="videos/IMG-0526.mp4" type="video/mp4"></video>
