--- a/graphic_design/poster_in_motion/poster_in_motion.html
+++ b/graphic_design/poster_in_motion/poster_in_motion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the game design page of the portfoilo">
-    <title>Poster In Motion</title>
+    <title>会动的海报</title>
     <link rel="stylesheet" href="../../global.css">
 </head>
 <body>
@@ -15,18 +15,18 @@
             <li ><a> </a>
             <li ><a> </a>
             <li ><a> </a>
-            <li><a href="../../index.html">Main<br>Page</a></li>
-            <li ><a>Graphic<br>Design</a>
+            <li><a href="../../index.html">主页</a></li>
+            <li ><a>平面设计</a>
             <ul class="dropdown">
-                <li><a>Poster In Motion</a></li>
-                <li><a href="../new_york_times_title/nytimes_title.html">New York Times Title</a></li>
-                <li><a href="../other/other.html">Other</a></li>
+                <li><a>会动的海报</a></li>
+                <li><a href="../new_york_times_title/nytimes_title.html">纽约时报<br>标题设计</a></li>
+                <li><a href="../other/other.html">其他</a></li>
             </ul>
             </li>
         </ul>
     </nav>
     <main>
-        <h1>Poster in Motion</h1>
+        <h1>会动的海报</h1>
         <div class="three_image">
             <video  width="400" height="680" controls autoplay muted>  <source src="video/final edition.mp4" type="video/mp4"></video>
             <img src="../../image/poster in motion.png" alt="A screenshot of where the game begins"  class="center">
