--- a/graphic_design/other/other.html
+++ b/graphic_design/other/other.html
@@ -32,8 +32,8 @@
             <img src="../../image/Spread the word.png" alt="A screenshot of where the game begins"  class="center">
             <img src="images/Cal challenge 1.png" alt="A screenshot of where the game begins"  class="center">
             <img src="images/Earth is calling.png" alt="A screenshot of where the game begins"  class="center">
-            <p>这张海报是为一个This poster is made for the manifesto, Spread the Word. It is a global campaign working towards inclusion for all people with intellectual and developmental disabilities. It encourages people to stop using “retard”, but respect these groups of people. <br><br>I centered my design around the idea of embracing and protecting, so in the poster, there is a visual element of two arms trying to hug these people, and the color I use is mainly a warm color. The intention of enlarging the font size of respect, the origin R word can be forgotten in the process.</p>
-            <p>This poster is designed to promote sustainable development, and the area I am tackling is the share ride. I listed three major benefits of share rides and then used symbols to present these benefits including price, social interaction, and it is sustainable. And there are two versions of it.</p>
+            <p>这张海报是为宣传一个国际宣言， Spread the Word. 这个国际宣言的目标对象是所有有生长或者智力缺陷的人群。它宣扬人们停止使用“retard”（弱智）这样的词语,取而代之应该尊重所有人群. <br><br>在我的设计中，我围绕着保护和接纳这两个核心思想，而我使用的所有的视觉要素都是有关这两个词语的。比如这张海报的主色调是暖色，视觉中心是两只手做出拥抱的动作，并且不使用原来的R word，而是改用respect尊重来重申立场。</p>
+            <p>这张海报是用来宣传可持续发展的。在所有可持续发展的议题中我选择了拼车作为这张海报的主题。我列举出了拼车最大的三个优点，并把他们变成了视觉元素，分别是省钱，社交和最根本的环境保护。我在这里放了这张海报的两个版本</p>
         </div>
         <h1>小知识手册</h1>
         <section class="container">
@@ -63,8 +63,8 @@
                </div>
             </div>
             </section>
-            <p>Fun fact booklet is a project based on a topic I am interested in and making a booklet from the topic. The topic I chose is tetris because it is a world-wide game that contains lots of history, and personally I love tetris as well. To design the booklet, I used tetris block pieces as the main elements, and got inspiration from its shape, game panel, and the context of tetris fun facts. Although the font choice is not the typeface tetris used in its original game, the typeface I chose is similar to typeface used in old video games. </p>
-        <h1>Personal ID</h1>
+            <p>小知识手册通过选取一个自己感兴趣的主题，并从中挑选一些关于这个主题有趣的小知识再把它做成手册。我选择的是俄罗斯方块，因为它不仅是一个全球性的游戏蕴含了很多的历史，而且我个人也很喜欢玩。在设计这个小册子时，我的灵感来源主要就是不同的俄罗斯方块本身，它的形状和颜色，还有游玩的页面，以及关于俄罗斯方块的小知识本身。 尽管没有使用俄罗斯方块本身的字体，但我选择了一款类似于旧的rpg游戏中会出现的字体风格。</p>
+        <h1>ID卡</h1>
         <div class="three_image">
             <img src="images/ID3.png" alt="A screenshot of where the game begins"  class="center">
             <img src="images/ID1.png" alt="A screenshot of where the game begins"  class="center">
@@ -85,7 +85,7 @@
     </main>
     
     <footer>
-    Email:zhany418@newschool.edu
+        Email: a13816106692@163.com
     </footer>
     <script src="../../enlarge_image.js"></script>
     <script src="../scripts/dropdown-menu.js"></script>
