--- a/graphic_design/poster_in_motion/poster_in_motion.html
+++ b/graphic_design/poster_in_motion/poster_in_motion.html
@@ -52,7 +52,7 @@
     </main>
     
     <footer>
-    Email:zhany418@newschool.edu
+        Email: a13816106692@163.com
     </footer>
     <script src="../../enlarge_image.js"></script>
     <script src="../scripts/dropdown-menu.js"></script>
