--- a/graphic_design/other/other.html
+++ b/graphic_design/other/other.html
@@ -70,16 +70,16 @@
             <img src="images/ID1.png" alt="A screenshot of where the game begins"  class="center">
             <img src="images/ID2.png" alt="A screenshot of where the game begins"  class="center">
          </div>
-         <p>Personal ID is a project aiming to use our name to design our personal business and school card. We need the initials from our name, and design a logo from it, then use this logo in the ID design. I think there is a lot of improvement space for the actuarial ID design, but I like the logo I end up with. I also enjoyed using the letter T and Z to form faces with different emotions, I think this represents my personality as well.</p>
+         <p>ID卡是一个针对自己，使用自己姓名的首字母设计的个人ID卡。首先我们需要把首字母变成一个logo，然后在ID卡的制作中使用这个logo。 虽然我认为ID卡还有很多的进步空间，但是logo本身的设计我还是很喜欢的。我也很喜欢用t和z就可以组成个各种不同情绪的小脸，我认为这个设计很可爱，也很能表达我的个性，所以尽管最后没有使用，我也把这张图展示了出来。</p>
         
         <h2>动态图形设计</h2>
         <div class="two_image">
             <video  width="600" height="600" controls autoplay muted>  <source src="videos/Moving Prints.mp4" type="video/mp4"></video>
             <video  width="600" height="600" controls autoplay muted>  <source src="videos/IMG-0526.mp4" type="video/mp4"></video>
-            <p>In this piece, I made the static packaging for presto! tissue box into a looping motion graphic piece. The circular repeated pattern really inspired me to make this spreading and overlapping movement.
+            <p>在这个作品中，我通过把 presto! 纸巾盒的静止包装改成了循环的动态图形。包装上重复的重叠的等圆给我了这个动态的灵感。
             </p>
             <p>
-            This is a waiting animation for my game in View, if you check my game design page. They share the same art assets. It is small and simple because wait animation should not take up too much space of its function. And because it is a finding game, I used a magnifying glass as the frame for the scene.
+           这是一个关于我游戏in view（视野中）的等待动画的设计。他们贡献了一样的美术素材。它的设计非常的简单，因为如果等待动画本身占取了太大的内存就失去了它本身的意义。因为视野中一部分是一个找东西的游戏，所以我设计了一个放大镜用来找东西的画面作为等待动画。 
             </p>
         </div>
     </main>
