--- a/graphic_design/poster_in_motion/poster_in_motion.html
+++ b/graphic_design/poster_in_motion/poster_in_motion.html
@@ -30,15 +30,15 @@
         <div class="three_image">
             <video  width="400" height="680" controls autoplay muted>  <source src="video/final edition.mp4" type="video/mp4"></video>
             <img src="../../image/poster in motion.png" alt="A screenshot of where the game begins"  class="center">
-            <p>This is a project designed for 2023 Halloween Parade located in NYC. The theme that year is "Outside down, Inside Out." I made this static image and corresponding motion graphic piece aims to display in the public environment for promotion.  </p>
+            <p>这是一个为了宣传2023年纽约万圣节游行而设计的海报。2023年的主题是，“从内而外，上下颠倒”（Outside down, Inside Out）。我首先制作了这张静止的海报，再从这个的基础上制作了动态设计，然后投放在公共场所，从而达到宣传的作用。</p>
         </div>
 
-        <h2>Process & Experiment</h2>
-        <p>The NYC Halloween Parade is an event held every year. During the event,  a lot of families are going to participate together, and the majority of people who are joining the parade are teenagers, that is why I want to make this poster a bit more playful.<br><br>
+        <h2>过程和另外的成果图</h2>
+        <p>纽约的万圣节游行每年都会进行。每年都有很多家庭会参与到这个活动中，除了家庭，大多数的参加人员都是青年，所以我希望海报本身能更加具有趣味性。<br><br>
 
-            The theme inside out, upside down is referring to the idea that you can be whoever you are on the outside, and you can transfer to a new form of you in this parade. This idea makes me think of those hero films in which they live an ordinary life but when needed, can transfer into their hero form. At the end, I put my focus point on the children, and taking inspiration from the flip book and spinning wheel. Cross match different traditional costume people and make it into a roulette wheel to make it more interesting. The background has a different texture from the costume. The choice of typeface is also referring to the childlike handwriting typeface, and the color palette is coming from the idea of this is a Halloween event held at night.<br><br>
+            2023年的主题从内而外，上下颠倒指的是每个人的外表和实际你想成为的不必是一样的，每个人都可以成为任何样子，而这张游行就是展现自己不同样子的机会。这让我想到在美国的英雄主义电影中，那些英雄在日常生活中也只是一个穿着普通的一般市民。最终，我还是把我的设计人群定在了儿童身上，并从翻页拼贴书中和转盘中获取了灵感。通过组合配对不同的传统万圣节形象来使整个画面更有趣味性。海报的背景使用不同的布料材质拼接而成，也代表了服装的多样性，你也可以成为任何你想成为的自己。选择的字体是具有童趣的手写风，同时也不失万圣节的一丝丝恐怖感，颜色使用也是经典的万圣节配色。<br><br>
         
-       I also list some experimental poster I like, but did not used for the final ae piece with the mockup I made to represent how my design will look like in the reality.</p>
+       我同时也列出来一些我做的没有做成成品但比较满意的其他海报，和一些我的设计会如何出现在现实场景里的样机图。</p>
         <div class="three_image">
             <img src="images/poster in motion.1.png" alt="A screenshot of where the game begins"  class="center">
             <video  width="400" height="580" controls autoplay muted>  <source src="video/poster in motion-1_1.mp4" type="video/mp4"></video>
