--- a/other/maya/maya.html
+++ b/other/maya/maya.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the graphic design page of the portfoilo">
-    <title>Maya Page </title>
+    <title>Maya（3d建模）</title>
     <link rel="stylesheet" href="../../global.css">
 </head>
 
@@ -14,17 +14,17 @@
             <li ><a> </a>
                 <li ><a> </a>
                 <li ><a> </a>
-                <li><a href="../../index.html">Main<br>Page</a></li>
-                <li ><a>Other</a>
+                <li><a href="../../index.html">主页</a></li>
+                <li ><a>其他</a>
                 <ul class="dropdown">
-                    <li><a>Maya</a></li>
-                    <li><a href="../resume/resume.html">Resume</a></li>
+                    <li><a>Maya（3d建模）</a></li>
+                    <li><a href="../resume/resume.html">简历</a></li>
                 </ul>
                 </li>
         </ul>
     </nav>
     <main>
-        <h2>House Project</h2>
+        <h2>房子</h2>
         <div class="three_image">
             <div class="image"><img src="image/house1.png" alt="A screenshot of where the game begins"  class="center"></div>
             <div class="image"><img src="image/house2.png" alt="A screenshot of where the game begins"  class="center"></div>
@@ -32,8 +32,8 @@
             <div class="image"><img src="../../image/final_render1.jpg" alt="A screenshot of where the game begins"  class="center"></div>
             <div class="image"><img src="../../image/final_render3.jpg" alt="A screenshot of where the game begins"  class="center"></div>
          </div>
-        <h2>character Design</h2>
-        <h1>RetoKuma</h1>
+        <h2>人物设计</h2>
+        <h1>RetoKuma（Reto熊）</h1>
         <div class="two_image">
             <div class="image"><img src="image/bear1.png" alt="A screenshot of where the game begins"  class="center"></div>
             <div class="image"><img src="image/bear2.png" alt="A screenshot of where the game begins"  class="center"></div>
@@ -43,10 +43,10 @@
          <iframe width="1080" height="640"
          src="https://www.youtube.com/embed/DU22oN-qQMw"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
          </iframe>
-        <h1>Monster</h1>
+        <h1>森林里的小男孩</h1>
     </main>
     <footer>
-        Email:zhany418@newschool.edu
+        Email: a13816106692@163.com
     </footer>  
     <script src="../../enlarge_image.js"></script>
     <script src="../scripts/dropdown-menu.js"></script>
