--- a/other/resume/resume.html
+++ b/other/resume/resume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the graphic design page of the portfoilo">
-    <title>Resume</title>
+    <title>简历</title>
     <link rel="stylesheet" href="../../global.css">
 </head>
 
@@ -14,20 +14,20 @@
             <li ><a> </a>
                 <li ><a> </a>
                 <li ><a> </a>
-                <li><a href="../../index.html">Main<br>Page</a></li>
-                <li ><a>Other</a>
+                <li><a href="../../index.html">主页</a></li>
+                <li ><a>其他</a>
                 <ul class="dropdown">
-                    <li><a href="../maya/maya.html">Maya</a></li>
-                    <li><a>Resume</a></li>
+                    <li><a href="../maya/maya.html">Maya（3d建模）</a></li>
+                    <li><a>简历</a></li>
                 </ul>
                 </li>
         </ul>
     </nav>
     <main>
-        <img src="Resume.png" alt="A screenshot of where the game begins"  class="center">
+        <img src="简历-02.png" alt="A screenshot of where the game begins"  class="center">
     </main>
     <footer>
-        Email:zhany418@newschool.edu
+        Email: a13816106692@163.com
     </footer>
     <script src="../scripts/dropdown-menu.js"></script>
 </body>
