--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 
         <h2>平面设计师</h2>
         <div class="three_image">
-            <a href="game_design/sky_skater/sky_skater.html">
-                <img src="image/skyskater.png" class="center"></img>
-            </a>
-            <a href="game_design/fragment_island/fragment_island.html"> 
-                <img src="image/island2.png" class="center">
+            <a href="graphic_design/other/other.html"> 
+                <img src="graphic_design/other/images/Cal challenge 1.png" class="center">
                 </a>
-            <a href="game_design/one_week_project/oneweekproject.html">
-            <img src="game_design/one_week_project/images/in view2.png"  class="center">
+            <a href="graphic_design/poster_in_motion/poster_in_motion.html">
+                <img src="image/poster in motion.png" class="center"></img>
+            </a>
+            <a href="graphic_design/other/other.html">
+            <img src="image/Spread the word.png"  class="center">
             </a>
         </div>
         
