--- a/other/maya/maya.html
+++ b/other/maya/maya.html
@@ -26,24 +26,29 @@
     <main>
         <h2>房子</h2>
         <div class="three_image">
-            <div class="image"><img src="image/house1.png" alt="A screenshot of where the game begins"  class="center"></div>
-            <div class="image"><img src="image/house2.png" alt="A screenshot of where the game begins"  class="center"></div>
-            <div class="image"><img src="image/house3.png" alt="A screenshot of where the game begins"  class="center"></div>
-            <div class="image"><img src="../../image/final_render1.jpg" alt="A screenshot of where the game begins"  class="center"></div>
-            <div class="image"><img src="../../image/final_render3.jpg" alt="A screenshot of where the game begins"  class="center"></div>
+            <img src="image/house1.png" alt="A screenshot of where the game begins"  class="center">
+            <img src="image/house2.png" alt="A screenshot of where the game begins"  class="center">
+            <img src="image/house3.png" alt="A screenshot of where the game begins"  class="center">
+            <img src="../../image/final_render1.jpg" alt="A screenshot of where the game begins"  class="center">
+            <img src="../../image/final_render3.jpg" alt="A screenshot of where the game begins"  class="center">
          </div>
         <h2>人物设计</h2>
         <h1>RetoKuma（Reto熊）</h1>
         <div class="two_image">
-            <div class="image"><img src="image/bear1.png" alt="A screenshot of where the game begins"  class="center"></div>
-            <div class="image"><img src="image/bear2.png" alt="A screenshot of where the game begins"  class="center"></div>
-            <div class="image"><img src="../../image/environment2.jpg" alt="A screenshot of where the game begins"  class="center"></div>
-            <div class="image"><img src="../../game_design/character in image.jpg" alt="A screenshot of where the game begins"  class="center"></div>
+            <img src="image/bear1.png" alt="A screenshot of where the game begins"  class="center">
+            <img src="image/bear2.png" alt="A screenshot of where the game begins"  class="center">
+            <img src="../../image/environment2.jpg" alt="A screenshot of where the game begins"  class="center">
+            <img src="../../game_design/character in image.jpg" alt="A screenshot of where the game begins"  class="center">
          </div>
-         <iframe width="1080" height="640"
-         src="https://www.youtube.com/embed/DU22oN-qQMw"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-         </iframe>
+         <iframe width="1080" height="640" src="https://player.bilibili.com/player.html?aid=1352393190&bvid=BV1zz421f7iL&cid=1486523018&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         <h1>森林里的小男孩</h1>
+        <div class="two_image">
+            <img src="image/屏幕截图 2024-04-01 043201.png" alt="A screenshot of where the game begins"  class="center">
+            <img src="image/屏幕截图 2024-04-01 043337.png" alt="A screenshot of where the game begins"  class="center">
+            <img src="image/屏幕截图 2024-04-01 043212.png" alt="A screenshot of where the game begins"  class="center">
+            <img src="image/屏幕截图 2024-04-01 043308.png" alt="A screenshot of where the game begins"  class="center">
+         </div>
+         <iframe width="1080" height="640" src="https://player.bilibili.com/player.html?aid=1802573475&bvid=BV1st421n7nY&cid=1489468077&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
     </main>
     <footer>
         Email: a13816106692@163.com
