--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src="image/me.jpg" alt="A picture of my self"class="quarter">
         </div>
         <h2>游戏设计师</h2>
-            <iframe src="https://player.bilibili.com/player.html?aid=1952264662&bvid=BV1aC411t7xU&cid=1487834030&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true" width="1080" height="640"> </iframe>
+            <iframe src="//player.bilibili.com/player.html?aid=1952264662&bvid=BV1aC411t7xU&cid=1487834030&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true" width="1080" height="640"> </iframe>
         <h3>周游戏项目</h3>
         <div class="three_image">
             <a href="game_design/sky_skater/sky_skater.html">
