--- a/game_design/sky_skater/sky_skater.html
+++ b/game_design/sky_skater/sky_skater.html
@@ -28,7 +28,7 @@
     </nav>
     <main>
         <h1>摩天大楼</h1>
-        <iframe src="https://player.bilibili.com/player.html?aid=1752431428&bvid=BV1Vx421X7TV&cid=1487018582&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true" width="1080" height="640"> </iframe>
+        <iframe src="//player.bilibili.com/player.html?aid=1752431428&bvid=BV1Vx421X7TV&cid=1487018582&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true" width="1080" height="640"> </iframe>
         <h2>介绍</h2>
         <p>这个项目的目的是创建一个不简简单单是到处走走，而是更复杂的操作系统。我们选择制作一块快节奏的飞行游戏。玩家可以操纵飞机在摩天大楼间穿梭飞行，享受速度带来的激情。而美术方面，我们想重现日出时高楼见雾蒙蒙的感觉。 </p>
         <a href="https://strawberrymorning.itch.io/sky-skater"  target="_blank"id="gamepage">点这里跳转游玩页面</a>
