--- a/other/maya/maya.html
+++ b/other/maya/maya.html
@@ -40,7 +40,7 @@
             <img src="../../image/environment2.jpg" alt="A screenshot of where the game begins"  class="center">
             <img src="../../game_design/character in image.jpg" alt="A screenshot of where the game begins"  class="center">
          </div>
-         <iframe width="1080" height="640" src="https://player.bilibili.com/player.html?aid=1352393190&bvid=BV1zz421f7iL&cid=1486523018&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+         <iframe width="1080" height="640" src="//player.bilibili.com/player.html?aid=1352393190&bvid=BV1zz421f7iL&cid=1486523018&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         <h1>森林里的小男孩</h1>
         <div class="two_image">
             <img src="image/屏幕截图 2024-04-01 043201.png" alt="A screenshot of where the game begins"  class="center">
@@ -48,7 +48,7 @@
             <img src="image/屏幕截图 2024-04-01 043212.png" alt="A screenshot of where the game begins"  class="center">
             <img src="image/屏幕截图 2024-04-01 043308.png" alt="A screenshot of where the game begins"  class="center">
          </div>
-         <iframe width="1080" height="640" src="https://player.bilibili.com/player.html?aid=1802573475&bvid=BV1st421n7nY&cid=1489468077&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+         <iframe width="1080" height="640" src="//player.bilibili.com/player.html?aid=1802573475&bvid=BV1st421n7nY&cid=1489468077&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
     </main>
     <footer>
         Email: a13816106692@163.com
