--- a/game_design/fragment_island/fragment_island.html
+++ b/game_design/fragment_island/fragment_island.html
@@ -28,7 +28,7 @@
     </nav>
     <main>
         <h1>漂浮岛屿</h1>
-        <iframe src="http://player.bilibili.com/player.html?aid=1602301967&bvid=BV1gm421n7hF&cid=1487018489&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true" width="1080" height="640"> </iframe>
+        <iframe src="//player.bilibili.com/player.html?aid=1602301967&bvid=BV1gm421n7hF&cid=1487018489&p=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true" width="1080" height="640"> </iframe>
         <h2>介绍</h2>
         <div class="two_image">
             <img src="images/island4.png" alt="A screenshot of where the game begins"  class="center">
