--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <h1>我是一名...</h1>
         <div class="two_image">
-            <p> 在帕森斯艺术学院就读的大三学生。我的专业是设计与科技（Design and Technology）中的游戏设计分支,并辅修平面和交互设计（communciation design）。 我对设计充满热情，在多年的学习中，也培养了对于美学的审美能力和对于最新艺术风向的捕捉能力，热爱二次元文化，对于游戏，动漫和漫画都与所了解。<br><br>而在工作中，我懂得变通，乐于沟通，很有责任心，能够尽最好的努力完成每一个任务。</p>
+            <p> 在帕森斯艺术学院就读的大四学生。我的专业是设计与科技（Design and Technology）中的游戏设计分支,并辅修平面和交互设计（communciation design）。 我对设计充满热情，在多年的学习中，也培养了对于美学的审美能力和对于最新艺术风向的捕捉能力，热爱二次元文化，对于游戏，动漫和漫画都与所了解。<br><br>而在工作中，我懂得变通，乐于沟通，很有责任心，能够尽最好的努力完成每一个任务。</p>
             <img src="image/me.jpg" alt="A picture of my self"class="quarter">
         </div>
         <h2>游戏设计师</h2>
